--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,18 +120,27 @@ nav a {
     
 }
 
+.mainContainer {
+    background: var(--colorBack);
+
+}
+
+.backSm {
+    background-size: 75%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+
 .mainBack2 {
     /* background-image:linear-gradient(blue, purple, darkgreen); */
     background-image: url("../images/ipod.jpg");
-    background-size: contain;
-    
 }
+    
 
 .mainBack3 {
     /* background-image:linear-gradient(khaki, teal, maroon); */
     background-image: url("../images/code.jpg");
-    background-size: contain;
-    
 }
 
 
@@ -185,15 +194,17 @@ nav a {
     width: 90vw;
     transition: all 100ms ease-in-out;
 }
+
 .card a {
     /* align-self: flex-start; */
     background: var(--colorTag);
     border: 2px solid var(--colorBorder);
     color: var(--colorLink);
     display: flex;
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
+    font-size: .9rem; 
     /* justify-self: center; */
-    height: 30px;
+    height: 23px;
     padding: 10px 5px 5px 5px;
     position: relative;
     text-decoration: none;
@@ -226,36 +237,43 @@ nav a {
     padding: 10px 0px;
     /* position: relative; */
     text-align: center;
-    width: 100%;
+    width: 59%;
+    height: 50%;
 }
 
-.innerCard h6 {
-    font-size: 1.5rem;
-    position:relative;
+.cardEven .innerCard {
+    margin-right: 35px;
 }
 
 .innerCard ul {
     position: relative;
-    margin: 0 10px;
+    margin: 0 8px;
+    font-size: .7rem;
 }
 
-.cardEven .innerCard {
-    /* left: 4%; */
+.innerCard h6 {
+    font-size: .9rem;
+    position:relative;
 }
 
+
+.innerCard li{
+    padding: 3px;
+}
 
 footer {
     background: var(--colorBack);
     display: flex;
-    height: 150px;
+    height: 160px;
+    margin-top: 10px;
     position:relative;
     width: 100%;
-    /* margin-top: -150px; */
 }
 
 footer ul {
     color: var(--colorText);
     font-size: 1.2rem;
+    padding: 0 0 20px 20px;
 }
 
 
@@ -275,9 +293,41 @@ footer a{
 }
 
 /* 414 max portrait mobile width */
-@media srceen and (min-width: 414px){
-   
+@media screen and (min-width: 414px){
+    
+    .card a {
+        font-size: 1.5rem;
+        height:30px;
+    }
 
+    .innerCard {
+        width: 100%;
+    }
+
+    .cardOdd .innerCard {
+        
+        justify-content: flex-end;
+    }
+
+    .cardEven .innerCard {
+        
+        justify-content: flex-start;
+    }
+
+    .cardInfo{
+        /* color: chartreuse; */
+        padding: 0 30px;
+    }
+
+    .innerCard li{
+        font-size: 1rem;
+        padding: 3px 0;
+    }
+
+        .innerCard h6 {
+        font-size: 1.2rem;
+    }
+    
 }
 
 /* 1366 min laptop display, i think */
@@ -302,16 +352,27 @@ footer a{
         flex: 1 0 50px;
         justify-content: center;
         width:max-content;
-        margin: 0 0;
+        /* max-height: 20px; */
+        margin: 0;
+        padding: 0;
+    }
+
+    
+    nav a {
+        padding:5px 0 0 0;
+        height: 100%;
+        width: 100%;
+    }
+
+    .navSm {
+        padding-top: 10px;
     }
 
     nav li:last-child{
         border-right: 2px solidvar(--colorBorderLinks);
+        padding: 0;
     }
 
-    nav a {
-        padding: auto; 
-    }
 
     nav li:hover {
         background: var(--colorCard);
@@ -329,13 +390,25 @@ footer a{
     .card:hover {
         box-shadow: 0px 0px 3px 1px var(--colorBorder);
         box-shadow: inset 0px 0px 3px 1px var(--colorBorder);
-        height: 101px;
+        height: calc(height+1px);
         width: 60.2vw;
     }
 
     .card:hover a {
         box-shadow: 0px 0px 3px 1px var(--colorBorder);
          box-shadow: inset 0px 0px 3px 1px var(--colorBorder);
+    }
+
+    .cardInfo{
+        padding: 0 60px;
+    }
+
+    .cardOdd .innerCard{
+        padding-right: 100px;
+    }
+
+    .cardEven .innerCard{
+        padding-left: 100px;
     }
 
     .cardOdd {
