--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,9 +78,9 @@ header h3 {
 
 
 nav{
-display: flex;
-flex-direction: column;
-align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 nav li {
@@ -97,9 +97,18 @@ nav li {
 nav li:last-child {
     border-bottom: 2px solid rgb(20, 20 ,20);
 }
-nav a {
-    margin: auto auto;
-    padding: 7px 3px;
+
+/* .navSm a {
+    width: 100%;
+    height: 100%;
+} */
+
+nav li:hover {
+    background: var(--colorCard);
+}
+
+nav li:hover a {
+    color: var(--colorLink);    
 }
 
 /* background elements */
@@ -115,18 +124,16 @@ nav a {
 
 .mainBack1 {
     /* background-image: linear-gradient(yellow, red,orange); */
-    background-image: url("../images/iphone.jpg");
+    background-image: url("../images/What\'s\ the\ Song_.png");
     background-size: contain;
-    
 }
 
 .mainContainer {
     background: var(--colorBack);
-
 }
 
 .backSm {
-    background-size: 75%;
+    background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -134,16 +141,17 @@ nav a {
 
 .mainBack2 {
     /* background-image:linear-gradient(blue, purple, darkgreen); */
-    background-image: url("../images/ipod.jpg");
+    background-image: url("../images/Travel\ Weather\ copy.png");
 }
-    
 
 .mainBack3 {
     /* background-image:linear-gradient(khaki, teal, maroon); */
-    background-image: url("../images/code.jpg");
+    background-image: url("../images/Work\ Day\ Schedul.png");
 }
 
-
+i{
+    font-style: italic;
+}
 
 .blocker {
     align-items: center;
@@ -170,6 +178,12 @@ nav a {
     margin: 10px 0;
     width: 80%;
     /* add change to media */
+}
+
+.ghRepoLinks{
+    align-self: flex-start;
+    color: var(--colorText);
+    margin: 15px 0 0 140px;
 }
 
 #lastBlocker {
@@ -351,37 +365,31 @@ footer a{
         border-right: none;
         display: flex;
         flex: 1 0 50px;
-        justify-content: center;
+        /* justify-content: center; */
         width:max-content;
         /* max-height: 20px; */
         margin: 0;
-        padding: 0;
+        padding: 10px 0 0 0;
     }
 
     
     nav a {
-        padding:5px 0 0 0;
         height: 100%;
         width: 100%;
     }
 
-    .navSm {
-        padding-top: 10px;
+
+    .navFix a{
+        padding-top: 20px;
     }
 
     nav li:last-child{
         border-right: 2px solidvar(--colorBorderLinks);
-        padding: 0;
+        /* padding: 0; */
     }
 
 
-    nav li:hover {
-        background: var(--colorCard);
-    }
-
-    nav li:hover a {
-        color: var(--colorLink);    
-    }
+    
 
 /* card build */
 
